src/objects/Global_Rewards_Group_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Account_Tax_ID__c</fullName>
        <formula>Child_Account__r.Tax_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Account Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account__c</fullName>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Rewards Group Relationships</relationshipLabel>
        <relationshipName>Global_Rewards_Group_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the child record was ended its relationship with the Parent Roll up account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Rewards_Group__c</fullName>
        <label>Global Rewards Group</label>
        <referenceTo>Global_Rewards_Group__c</referenceTo>
        <relationshipLabel>Global Rewards Group Relationships</relationshipLabel>
        <relationshipName>Global_Rewards_Group</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the child record was added to the Parent Roll up account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF((Start_Date__c &lt;= TODAY() &amp;&amp; (ISBLANK(End_Date__c) ||  End_Date__c &gt;= TODAY())), &apos;Active&apos;, 
IF((Start_Date__c &gt; Today()), &apos;Future&apos;, &apos;Inactive&apos;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Global Rewards Group Relationship</label>
    <nameField>
        <displayFormat>PREMIER-{0000}</displayFormat>
        <label>Global Rewards Group Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Rewards Group Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>